updated comunity artle before opacity / fixed missalignment on grid and added styles to consultant grid tiles

--- a/scss/v2/community-article.scss
+++ b/scss/v2/community-article.scss
@@ -195,7 +195,7 @@ $container-max-width-mq: #{$container-max-width} + 48px;
     }
 
     .tile_z .tile_z-overlay {
-      background: rgba(0, 145, 218, 0.6);
+      background: rgba(0, 145, 218, 0.5);
       height: 100%;
       width: 100%;
       left: 0;
